--- a/RSWebApp/templates/contacts.html
+++ b/RSWebApp/templates/contacts.html
@@ -335,7 +335,7 @@
           <a style="text-align: center;" href="{{ url_for('memBased') }}">User's Best Rates</a>
         </div>
 
-        <a href="{{ url_for('contacts') }}"><i class="material-icons">email</i><span class="icon-text"></span >&nbsp;&nbsp;&nbsp;Contacts<span></a>
+        <a href="#"><i class="material-icons">email</i><span class="icon-text"></span >&nbsp;&nbsp;&nbsp;Contacts<span></a>
 </div>
 
 
@@ -349,118 +349,59 @@
 		{% endfor %}
 	{% endif %}
     {% endwith %}
-    {% if films %}
-        {% for film in films %}
-            <div id="player-box" class="content-box">
-                <div class="player-aux" style="overflow: visible; padding-bottom: 15px;">
-                <div class="thumb" title="Title" style="display: block;">
-                    <img src="../static/{{film['title']}}.jpg" width="140" height="200">
-                    <a id ="{{film['movieId']}}" href="{{ url_for('rate',filmId = film['movieId'] )}}" class="thumb-aux" style="cursor:pointer;height: 30px;margin-top: 10px; margin-bottom: 10px; background: linear-gradient(#e52d27,#b31217 100%);color: white;text-decoration: none;font-family: Tahoma;">
-                        <center style="font-family: 'PTSans Bold',Tahoma;"> WATCH <img src="../static/play2.jpg" style=" width: 20px;height: 20px;margin-left: 10px; margin-bottom: 3px; border-radius: 15px;">
-                        </center>
-                    </a>
+
+
+    <br><br>
+   
+    <!-- Contact Page -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h3 class="section-subheading text-muted">We live on Santa's Factory, in Icy Village!</h3>
+          <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <form id="contactForm" name="sentMessage" novalidate="novalidate">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <p class="help-block text-danger"></p>
                 </div>
+                <div class="form-group">
+                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                  <p class="help-block text-danger"></p>
                 </div>
-                <div class="movie-info">
-                <a class="movie-name">{{film["title"]}}</a>
-                <div class="movie-detailed-info">
-                    <span class="original-name">"{{film["title"]}}"</span>
-                    <div class="detailed-aux" style="line-height: 18px;width:100%;">
-                        <span class="genre">
-                            {%if film["Animation"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Animation; </a>
-                            {% endif %}
-                            {%if film["Adventure"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Adventure; </a>
-                            {% endif %}
-                            {%if film["Romance"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Romance; </a>
-                            {% endif %}
-                            {%if film["Comedy"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Comedy; </a>
-                            {% endif %}
-                            {%if film["Action"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Action; </a>
-                            {% endif %}
-                            {%if film["Family"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Family; </a>
-                            {% endif %}
-                            {%if film["History"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">History; </a>
-                            {% endif %}
-                            {%if film["Drama"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Drama; </a>
-                            {% endif %}
-                            {%if film["Crime"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Crime; </a>
-                            {% endif %}
-                            {%if film["Fantasy"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Fantasy; </a>
-                            {% endif %}
-                            {%if film["Si-Fi"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Sience Fiction; </a>
-                            {% endif %}
-                            {%if film["Thriller"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Thriller; </a>
-                            {% endif %}
-                            {%if film["Music"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Music; </a>
-                            {% endif %}
-                            {%if film["Horror"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Horror; </a>
-                            {% endif %}
-                            {%if film["Documentary"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Documentary; </a>
-                            {% endif %}
-                            {%if film["Mystery"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Mystery; </a>
-                            {% endif %}
-                            {%if film["Western"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Western; </a>
-                            {% endif %}
-                            {%if film["TV Movie"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">TV Movie; </a>
-                            {% endif %}
-                            {%if film["War"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">War; </a>
-                            {% endif %}
-                            {%if film["Foreign"] == 1 %}
-                            <a style="color: #4282A8;text-decoration: inherit;">Foreign; </a>
-                            {% endif %}
-                        </span>
-                        <span>{{film["release_date"]}}</span>
-                    <div>
-                        {% if film["English"] == 1%}
-                        <img src="../static/uk.png" width="10px" height="10px" alt="Inglês" title="Inglês"/>
-                        {% endif %}
-                        {% if film["Deutsh"] == 1%}
-                        <img src="../static/germany.png" width="10px" height="10px" alt="Alemão" title="Alemão"/>
-                        {% endif %}
-                        {% if film["Français"] == 1%}
-                        <img src="../static/france.png" width="10px" height="10px" alt="Françês" title="Françês"/>
-                        {% endif %}
-                        {% if film["Espanhol"] == 1%}
-                        <img src="../static/spain.png" width="10px" height="10px" alt="Espanhol" title="Espanhol"/>
-                        {% endif %}
-                    </div>
+                <div class="form-group">
+                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+                  <p class="help-block text-danger"></p>
                 </div>
-                <div class="movie-imdb">
-                    <div class="imdb-stars">
-                        <div class="imdb-rate">
-                            <span style="font-size: 18px;"> IMDB&nbsp;Score:&nbsp;{{film["vote_average"]}}/10 </span>
-                            {% if ratings %}
-                                <span style="font-size: 18px;"> Users&nbsp;Score:&nbsp;{{ratings[loop.index]}}/5 </span>
-                            {% endif %}
-                        </div>
-                    </div>    
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message." rows="5"></textarea>
+                  <p class="help-block text-danger"></p>
                 </div>
-                <span id="movie-synopsis" class="movie-synopsis" style="margin-top: 15px;"><span style="font-family: 'PTSans Bold', Tahoma;font-size: 13px;color: #7F7F82;">Descrição:</span> {{film["overview"]}}</span>
-                </div>
+              </div>
+              <div class="clearfix"></div>
+              <div class="col-lg-12 text-center">
+                <div id="success"></div>
+                <button id="sendMessageButton" class="btn btn-success btn-xl text-uppercase" type="submit">Send Message</button>
+              </div>
             </div>
-        {% endfor %}
-    {% endif %}
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!--
 	{% block content %}
 	{% endblock %}
+    -->
+    
     </div>
 </div>
 
