--- a/RSWebApp/templates/rate.html
+++ b/RSWebApp/templates/rate.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <!-- Font Awesome Icon Library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -125,10 +126,10 @@
             position: relative;
         }
         div.content-box {
-            width: 880px;
+            width: 580px;
             height: 40%;
-            margin-top: 10%;
-            margin-left: 10%;
+            margin-top: 16%;
+            margin-left: 25%;
             background-color: #f4f4f4;
             border: 1px solid #bdbcbc;
             border-radius: 5px;
@@ -140,15 +141,17 @@
             overflow: hidden;
         }
         div.movie-detailed-info span.genre{
-            float: left;
+            float: center;
             width: 400px;
             overflow: hidden;
             font-size: 12px;
+            text-align: center;
         }
         div.movie-info {
             float: left;
-            width: 609px;
+            width: 309px;
             margin-top: 2px;
+            margin-left: 50px;
         }
         div.player-aux {
             width: 930px;
@@ -202,6 +205,7 @@
             font-size: 20px;
             color: black;
             text-decoration: none;
+            text-align: center;
         }
         .crop {
             width: 21px;
@@ -248,6 +252,74 @@
                 font-size: 18px;
             }
         }
+        div.stars {
+
+  width: 270px;
+
+  display: inline-block;
+
+}
+
+ 
+
+input.star { display: none; }
+
+ 
+
+label.star {
+
+  float: right;
+
+  padding: 10px;
+
+  font-size: 36px;
+
+  color: #444;
+
+  transition: all .2s;
+
+}
+
+ 
+
+input.star:checked ~ label.star:before {
+
+  content: '\f005';
+
+  color: #FD4;
+
+  transition: all .25s;
+
+}
+
+ 
+
+input.star-5:checked ~ label.star:before {
+
+  color: #FE7;
+
+  text-shadow: 0 0 20px #952;
+
+}
+
+ 
+
+input.star-1:checked ~ label.star:before { color: #F62; }
+
+ 
+
+label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+ 
+
+label.star:before {
+
+  content: '\f006';
+
+  font-family: FontAwesome;
+
+}
+
     </style>
 
 	{% if title %}
@@ -343,26 +415,43 @@
                 </div>
                 </div>
                 <div class="movie-info">
-                <a class="movie-name">{{film["title"]}}</a>
+                <a class="movie-name" style="text-align: center">{{film["title"]}}</a>
                 <div class="movie-detailed-info">
-                    <span class="original-name">"{{film["title"]}}"</span>
-                <div class="movie-imdb">
-                	<div>
-						<a onmouseover="fill1()"><span id="1star" class="fa fa-star" style="color: white;font-size: 26px;"></span></a>
-						<a onmouseover="fill2()"><span id="2star" class="fa fa-star" style="color: white;font-size: 26px;"></span></a>
-						<a onmouseover="fill3()"><span id="3star" class="fa fa-star" style="color: white;font-size: 26px;"></span></a>
-						<a onmouseover="fill4()"><span id="4star" class="fa fa-star" style="color: white;font-size: 26px;"></span></a>
-						<a onmouseover="fill5()"><span id="5star" class="fa fa-star" style="color: white;font-size: 26px;"></span></a>
-						<br><br>
-					</div>
-						<div style="display: inline-block;">
-							<button style="border-radius: 7px;margin: 4px 5px;padding: 5px 2px;text-align: center;height: 35px;">SUBMIT</button>
-							<button style="border-radius: 7px;margin: 4px 5px;padding: 5px 2px;text-align: center;height: 35px;">IGNORE</button>
-						</div> 
+                    <span class="original-name" style="text-align: center">"{{film["title"]}}"</span>
                 </div>
-                </div>
+                <br>
+                <div class="stars">
+
+  <form action="">
+
+    <input onclick="setvar(1)" class="star star-5" id="star-5" type="radio" name="star" value="1" />
+
+    <label class="star star-5" for="star-5"></label>
+
+    <input onclick="setvar(2)" class="star star-4" id="star-4" type="radio" name="star" value="2"/>
+
+    <label class="star star-4" for="star-4"></label>
+
+    <input onclick="setvar(3)" class="star star-3" id="star-3" type="radio" name="star" value="3"/>
+
+    <label class="star star-3" for="star-3"></label>
+
+    <input onclick="setvar(4)" class="star star-2" id="star-2" type="radio" name="star" value="4"/>
+
+    <label class="star star-2" for="star-2"></label>
+
+    <input onclick="setvar(5)" class="star star-1" id="star-1" type="radio" name="star"/>
+
+    <label class="star star-1" for="star-1"></label>
+
+  </form>
+
+</div>
+    	        <div style="display: inline-block;">
+					<a href="{{ url_for('submit',value = value) }}"><button onclick="submit()" style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px;text-align: center;height: 25px;margin-top: 10%;margin-left: 60%;font-size: 13px;">SUBMIT</button></a>
+					<a href="{{ url_for('top10_avg') }}"><button style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px; text-align: center;height: 25px;margin-left: 60%;font-size: 13px;">IGNORE</button></a>
+				</div> 
             </div>
-    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -437,6 +526,86 @@
 		document.getElementById('4star').style.color = 'red';
 		document.getElementById('5star').class = 'fa fa-star checked';
 		document.getElementById('5star').style.color = 'red';
+	}
+</script>
+<script>
+        var mini = true;
+
+        function toggleSidebar() {
+            if (mini) {
+                console.log("opening sidebar");
+                document.getElementById("mySidebar").style.width = "290px";
+                document.getElementById("main").style.marginLeft = "290px";
+                this.mini = false;
+            } else {
+                var elem = document.getElementById("mySidebar");
+                var mouseFora = !$(elem).is(":hover");
+                console.log("closing sidebar");
+                document.getElementById("mySidebar").style.width = "70px";
+                document.getElementById("main").style.marginLeft = "100px";
+                if (mouseFora) {
+                    console.log("closing submenu0/1/2");
+                    document.getElementById('subMenu0').style.display = 'none';
+                    document.getElementById('subMenu1').style.display = 'none';
+                    document.getElementById('subMenu2').style.display = 'none';
+                    this.sub0 = true;
+                    this.sub1 = true;
+                    this.sub2 = true;
+                }
+                this.mini = true;
+            }
+
+        }
+</script>
+<script>
+        var sub0 = true;
+
+        function toggleSubmenu0() {
+            if (sub0 && !mini) {
+                console.log("opening submenu0");
+                document.getElementById('subMenu0').style.display = 'block';
+                this.sub0 = false;
+            } else {
+                console.log("closing submenu0");
+                document.getElementById('subMenu0').style.display = 'none';
+                this.sub0 = true;
+            }
+        }
+</script>
+<script>
+        var sub1 = true;
+
+        function toggleSubmenu1() {
+            if (sub1 && !mini) {
+                console.log("opening submenu1");
+                document.getElementById('subMenu1').style.display = 'block';
+                this.sub1 = false;
+            } else {
+                console.log("closing submenu1");
+                document.getElementById('subMenu1').style.display = 'none';
+                this.sub1 = true;
+            }
+        }
+</script>
+<script>
+        var sub2 = true;
+
+        function toggleSubmenu2() {
+            if (sub2 && !mini) {
+                console.log("opening submenu2");
+                document.getElementById('subMenu2').style.display = 'block';
+                this.sub2 = false;
+            } else {
+                console.log("closing submenu2");
+                document.getElementById('subMenu2').style.display = 'none';
+                this.sub2 = true;
+            }
+        }
+</script>
+<script>
+	var value = 0;
+	function setvar(val){
+		value = val;
 	}
 </script>
 </body>
