--- a/RSWebApp/templates/rate.html
+++ b/RSWebApp/templates/rate.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<!-- Font Awesome Icon Library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Font Awesome Icon Library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -258,67 +258,67 @@
 
   display: inline-block;
 
-}
+	}
 
  
 
-input.star { display: none; }
+	input.star { display: none; }
 
  
 
-label.star {
+	label.star {
 
-  float: right;
+	  float: right;
 
-  padding: 10px;
+	  padding: 10px;
 
-  font-size: 36px;
+	  font-size: 36px;
 
-  color: #444;
+	  color: #444;
 
-  transition: all .2s;
+	  transition: all .2s;
 
-}
-
- 
-
-input.star:checked ~ label.star:before {
-
-  content: '\f005';
-
-  color: #FD4;
-
-  transition: all .25s;
-
-}
+	}
 
  
 
-input.star-5:checked ~ label.star:before {
+	input.star:checked ~ label.star:before {
 
-  color: #FE7;
+	  content: '\f005';
 
-  text-shadow: 0 0 20px #952;
+	  color: #FD4;
 
-}
+	  transition: all .25s;
 
- 
-
-input.star-1:checked ~ label.star:before { color: #F62; }
+	}
 
  
 
-label.star:hover { transform: rotate(-15deg) scale(1.3); }
+	input.star-5:checked ~ label.star:before {
+
+	  color: #FE7;
+
+	  text-shadow: 0 0 20px #952;
+
+	}
 
  
 
-label.star:before {
+	input.star-1:checked ~ label.star:before { color: #F62; }
 
-  content: '\f006';
+ 
 
-  font-family: FontAwesome;
+	label.star:hover { transform: rotate(-15deg) scale(1.3); }
 
-}
+ 
+
+	label.star:before {
+
+	  content: '\f006';
+
+	  font-family: FontAwesome;
+
+	}
 
     </style>
 
@@ -327,31 +327,32 @@ label.star:before {
 	{% else %}
 		<title>RecSys</title>
 	{% endif %}
-
 </head>
-<body translate="no" style="background-color: #a9b3c2;;">
-	<nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark" style="background-color: #111;">
-		<div class="container">
-			<a class="navbar-brand" href="{{ url_for('home') }}" ><strong>RecSys</strong></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+<body translate="no" style="background-color: #a9b3c2;">
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{ url_for('home') }}">Logout</a>
-					</li>
-			</li>
-		</ul>
-		<form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="post">
-			<input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		</form>
+<nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark" style="background-color: #111;">
+	<div class="container">
+		<a class="navbar-brand" href="{{ url_for('home') }}" ><strong>RecSys</strong></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ url_for('home') }}">Logout</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="post">
+				<input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</div>
 	</div>
+</nav>
+
 <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
         <a href="#" class="dropdown-btn" onclick="toggleSubmenu0()"><i class="fa">&#xf073;</i><span class="icon-text">&nbsp;&nbsp;&nbsp;Year<i class="fa fa-caret-down"></i></span></a>
         <div id="subMenu0" class="dropdown-container" >
@@ -404,130 +405,52 @@ label.star:before {
         </div>
 
         <a href="{{ url_for('contacts') }}"><i class="material-icons">email</i><span class="icon-text"></span >&nbsp;&nbsp;&nbsp;Contacts<span></a>
-		</div>
-	</nav>
+</div>
 
 <div id="main" class="container">
             <div id="player-box" class="content-box">
                 <div class="player-aux" style="overflow: visible; padding-bottom: 15px;">
-                <div class="thumb" title="Title" style="display: block;">
-                    <img src="../static/{{film['title']}}.jpg" width="160" height="220" style="margin-top: 10%;">
-                </div>
+                	<div class="thumb" title="Title" style="display: block;">
+                    	<img src="../static/{{film['title']}}.jpg" width="160" height="220" style="margin-top: 10%;">
+                	</div>
                 </div>
                 <div class="movie-info">
-                <a class="movie-name" style="text-align: center">{{film["title"]}}</a>
-                <div class="movie-detailed-info">
-                    <span class="original-name" style="text-align: center">"{{film["title"]}}"</span>
-                </div>
-                <br>
-                <div class="stars">
-
-  <form action="">
-
-    <input onclick="setvar(1)" class="star star-5" id="star-5" type="radio" name="star" value="1" />
-
-    <label class="star star-5" for="star-5"></label>
-
-    <input onclick="setvar(2)" class="star star-4" id="star-4" type="radio" name="star" value="2"/>
-
-    <label class="star star-4" for="star-4"></label>
-
-    <input onclick="setvar(3)" class="star star-3" id="star-3" type="radio" name="star" value="3"/>
-
-    <label class="star star-3" for="star-3"></label>
-
-    <input onclick="setvar(4)" class="star star-2" id="star-2" type="radio" name="star" value="4"/>
-
-    <label class="star star-2" for="star-2"></label>
-
-    <input onclick="setvar(5)" class="star star-1" id="star-1" type="radio" name="star"/>
-
-    <label class="star star-1" for="star-1"></label>
-
-  </form>
-
-</div>
-    	        <div style="display: inline-block;">
-					<a href="{{ url_for('submit',value = value) }}"><button onclick="submit()" style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px;text-align: center;height: 25px;margin-top: 10%;margin-left: 60%;font-size: 13px;">SUBMIT</button></a>
-					<a href="{{ url_for('top10_avg') }}"><button style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px; text-align: center;height: 25px;margin-left: 60%;font-size: 13px;">IGNORE</button></a>
-				</div> 
+                	<a class="movie-name" style="text-align: center">{{film["title"]}}</a>
+                	<div class="movie-detailed-info">
+                    	<span class="original-name" style="text-align: center">"{{film["title"]}}"</span>
+                	</div>
+                	<br>
+  					<form action="{{ url_for('submit', filmId = film['movieId']) }}" method="post">
+	  					<div class="stars">
+    						<input onclick="enableButton()" class="star star-5" id="star-5" type="radio" name="star" value="1" />
+    						<label class="star star-5" for="star-5"></label>
+	    					<input onclick="enableButton()" class="star star-4" id="star-4" type="radio" name="star" value="2"/>
+    						<label class="star star-4" for="star-4"></label>
+    						<input onclick="enableButton()" class="star star-3" id="star-3" type="radio" name="star" value="3"/>
+	    					<label class="star star-3" for="star-3"></label>
+    						<input onclick="enableButton()" class="star star-2" id="star-2" type="radio" name="star" value="4"/>
+    						<label class="star star-2" for="star-2"></label>
+	    					<input onclick="enableButton()" class="star star-1" id="star-1" type="radio" name="star" value="5"/>
+						    <label class="star star-1" for="star-1"></label>
+						</div>
+	    	        	<div style="display: inline-block;">
+						<button id="submitButton"  type="submit" style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px;text-align: center;height: 25px;margin-top: 10%;margin-left: 60%;font-size: 13px;" disabled>SUBMIT</button>
+						<a href="{{ url_for('top10_avg') }}">
+							<button style="border-radius: 7px;margin: 4px 5px;padding: 2px 1px; text-align: center;height: 25px;margin-left: 60%;font-size: 13px;" type="button">IGNORE</button>
+						</a>
+						</div> 
+					</form>
+            	</div>
             </div>
 </div>
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
  
-<script>
-	function fill1(){
-		document.getElementById('1star').class = 'fa fa-star checked';
-		document.getElementById('1star').style.color = 'red';
-		document.getElementById('2star').class = 'fa fa-star';
-		document.getElementById('2star').style.color = 'white';
-		document.getElementById('3star').class = 'fa fa-star';
-		document.getElementById('3star').style.color = 'white';
-		document.getElementById('4star').class = 'fa fa-star';
-		document.getElementById('4star').style.color = 'white';
-		document.getElementById('5star').class = 'fa fa-star';
-		document.getElementById('5star').style.color = 'white';
-	}
-</script>
-<script>
-	function fill2(){
-		document.getElementById('1star').class = 'fa fa-star checked';
-		document.getElementById('1star').style.color = 'red';
-		document.getElementById('2star').class = 'fa fa-star checked';
-		document.getElementById('2star').style.color = 'red';
-		document.getElementById('3star').class = 'fa fa-star';
-		document.getElementById('3star').style.color = 'white';
-		document.getElementById('4star').class = 'fa fa-star';
-		document.getElementById('4star').style.color = 'white';
-		document.getElementById('5star').class = 'fa fa-star';
-		document.getElementById('5star').style.color = 'white';
-	}
-</script>
-<script>
-	function fill3(){
-		document.getElementById('1star').class = 'fa fa-star checked';
-		document.getElementById('1star').style.color = 'red';
-		document.getElementById('2star').class = 'fa fa-star checked';
-		document.getElementById('2star').style.color = 'red';
-		document.getElementById('3star').class = 'fa fa-star checked';
-		document.getElementById('3star').style.color = 'red';
-		document.getElementById('4star').class = 'fa fa-star';
-		document.getElementById('4star').style.color = 'white';
-		document.getElementById('5star').class = 'fa fa-star';
-		document.getElementById('5star').style.color = 'white';
-	}
-</script>
-<script>
-	function fill4(){
-		document.getElementById('1star').class = 'fa fa-star checked';
-		document.getElementById('1star').style.color = 'red';
-		document.getElementById('2star').class = 'fa fa-star checked';
-		document.getElementById('2star').style.color = 'red';
-		document.getElementById('3star').class = 'fa fa-star checked';
-		document.getElementById('3star').style.color = 'red';
-		document.getElementById('4star').class = 'fa fa-star checked';
-		document.getElementById('4star').style.color = 'red';
-		document.getElementById('5star').class = 'fa fa-star';
-		document.getElementById('5star').style.color = 'white';
-	}
-</script>
-<script>
-	function fill5(){
-		document.getElementById('1star').class = 'fa fa-star checked';
-		document.getElementById('1star').style.color = 'red';
-		document.getElementById('2star').class = 'fa fa-star checked';
-		document.getElementById('2star').style.color = 'red';
-		document.getElementById('3star').class = 'fa fa-star checked';
-		document.getElementById('3star').style.color = 'red';
-		document.getElementById('4star').class = 'fa fa-star checked';
-		document.getElementById('4star').style.color = 'red';
-		document.getElementById('5star').class = 'fa fa-star checked';
-		document.getElementById('5star').style.color = 'red';
-	}
-</script>
+
 <script>
         var mini = true;
 
@@ -540,19 +463,19 @@ label.star:before {
             } else {
                 var elem = document.getElementById("mySidebar");
                 var mouseFora = !$(elem).is(":hover");
-                console.log("closing sidebar");
-                document.getElementById("mySidebar").style.width = "70px";
-                document.getElementById("main").style.marginLeft = "100px";
                 if (mouseFora) {
+                	console.log("closing sidebar");
+                	document.getElementById("mySidebar").style.width = "70px";
+                	document.getElementById("main").style.marginLeft = "100px";
                     console.log("closing submenu0/1/2");
                     document.getElementById('subMenu0').style.display = 'none';
                     document.getElementById('subMenu1').style.display = 'none';
                     document.getElementById('subMenu2').style.display = 'none';
+                    this.mini = true;
                     this.sub0 = true;
                     this.sub1 = true;
                     this.sub2 = true;
                 }
-                this.mini = true;
             }
 
         }
@@ -603,9 +526,8 @@ label.star:before {
         }
 </script>
 <script>
-	var value = 0;
-	function setvar(val){
-		value = val;
+	function enableButton(){
+		document.getElementById('submitButton').disabled = false;
 	}
 </script>
 </body>
